--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
   <title>Mi Portfolio</title>
@@ -32,8 +33,8 @@
   <section id="home" class="content">
     <div class="half-section">
      <div class="avatar-container">
-      <img src="./assets/avatar.png" alt="">
-      <h3>"Yo, disfrutando de mi café..."</h3>
+      <img src="./assets/avatar2.png" alt="">
+      <h3>"Yo, programando por las mañanas..."</h3>
      </div>
     </div>
     <div class="half-section text-section">
